# gbrs

./: .gitignore  Cargo.toml  LICENSE.md  NOTE.md  README.md
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: alu.rs  apu.rs  callbacks.rs  cartridge.rs  cgb_dma.rs  config.rs  constants.rs  cpu.rs  gpu.rs  helpers.rs  interrupts.rs  joypad.rs  lcd.rs  lib.rs  registers.rs  serial_cable.rs
core/src/colour/: bg_map_attributes.rs  colour.rs  grey_shades.rs  mod.rs  palette_ram.rs
core/src/memory/: battery_backed_ram.rs  cgb_speed_switch.rs  memory.rs  mod.rs  ram.rs  rom.rs  vram.rs
core/src/memory/mbcs/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs  none.rs
core/src/sound/: apu.rs  channel1.rs  channel2.rs  channel3.rs  channel4.rs  length_function.rs  mod.rs  registers.rs  volume_envelope.rs
libretro/: Cargo.toml  libgbrs_libretro.info  run.sh
libretro/src/: lib.rs
profiling/: Cargo.toml
profiling/src/: main.rs
sdl-gui/: Cargo.toml  build.rs
sdl-gui/src/: gui.rs  main.rs
sfml-gui/: Cargo.toml
sfml-gui/src/: control.rs  gui.rs  main.rs
src/: main.rs
src/gameboy/: apu.rs  cartridge.rs  constants.rs  cpu.rs  gpu.rs  helpers.rs  interrupts.rs  joypad.rs  lcd.rs  mod.rs  registers.rs  serial_cable.rs
src/gameboy/memory/: battery_backed_ram.rs  memory.rs  mod.rs  ram.rs  rom.rs
src/gameboy/memory/mbcs/: mbc1.rs  mod.rs  none.rs
src/gui/: mod.rs
wasm-gui/: Cargo.toml  buildAndServe.sh  index.html
wasm-gui/src/: lib.rs
