[package]
name = "gbrs-core"
version = "0.2.0"
authors = ["Adam Soutar <adam@overflo.me>"]
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
smallvec = "1.8.0"
spin = { version = "0.9.8", features = ["spin_mutex"] }

[features]
default = ["std", "sound"]
std = ["lazy_static"]
sound = []
