[package]
name = "gbrs-libretro"
version = "0.1.0"
edition = "2021"

[dependencies]
libretro-rs = { git = "https://github.com/libretro-rs/libretro-rs.git", features = [
  "experimental",
] }
gbrs-core = { path = "../core", features = ["sound"], default-features = false }
spin = { version = "0.10.0", features = ["once", "spin_mutex"] }

[lib]
crate-type = ["cdylib"]
